creator-beta/tests/arch/mips/instructions/test_mips_instruction_033.out


Error at line 16 (Please enter the assembly code before compiling):
Please enter the assembly code before compiling

  15 #  	 srli x10, x7, 15
->16 

Not executed
keyboard[0x0]:''; display[0x0]:''; 

