creator-beta/tests/arch/mips/instructions/test_mips_instruction_033.s

#
# Creator (https://creatorsim.github.io/creator/)
#

#.text
#main:

#    li x5, 0xAAD4
#    li x6, 4567
#    li x7, -9486

#    srli x8, x5, 2
#    srli x9, x6, 1
#  	 srli x10, x7, 15
